# quahog

./: .gitignore  PLAN.md  README.md  hatch_build.py  pyproject.toml
decision_history/: 2026-07-22 old plans.md
docs/: hooks.md
examples/: demo.ipynb
js/: package.json  pnpm-lock.yaml  widget.css  widget.js
src/quahog/: __init__.py  copy.py  fork.py  injection.py  magics.py  mcp.py  minutes.py  osc.py  record.py  result.py  screen.py  session.py  state.py  sub_sessions.py  utils.py  widget.py
src/quahog/inject/: posix.sh  zsh.zsh
src/quahog/interceptors/: __init__.py  builtins.py
tests/: conftest.py  test_copy.py  test_exec.py  test_fork.py  test_inject.py  test_interceptors.py  test_kernel_protocol.py  test_minutes.py  test_osc.py  test_record.py  test_remote.py  test_result.py  test_screen.py  test_session.py  test_sub_sessions.py  test_zsh.py
