[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quahog"
version = "0.1.0"
description = "Interactive console sessions, captured in Jupyter notebooks"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "anywidget>=0.9",
    "ptyprocess>=0.7; sys_platform != 'win32'",
    "ipython>=8.0",
]
classifiers = [
    "Framework :: Jupyter",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = ["pytest>=7", "jupyterlab>=4"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/quahog"]
artifacts = ["src/quahog/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
